@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclWinDde.c,v 1.7 2001/08/22 23:56:14 hobbs Exp $
+ * RCS: @(#) $Id: tclWinDde.c,v 1.8 2002/01/18 14:07:40 dgp Exp $
  */
 
 #include "tclPort.h"
@@ -834,11 +834,11 @@ Tcl_DdeObjCmd(
 	DDE_EVAL
     };
 
-    static char *ddeCommands[] = {"servername", "execute", "poke",
+    static CONST char *ddeCommands[] = {"servername", "execute", "poke",
           "request", "services", "eval", 
 	  (char *) NULL};
-    static char *ddeOptions[] = {"-async", (char *) NULL};
-    static char *ddeReqOptions[] = {"-binary", (char *) NULL};
+    static CONST char *ddeOptions[] = {"-async", (char *) NULL};
+    static CONST char *ddeReqOptions[] = {"-binary", (char *) NULL};
     int index, argIndex;
     int async = 0, binary = 0;
     int result = TCL_OK;
